[package]
name = "rx_github"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenv = "0.15"
image = "0.24"
lazy_static = "1.4"
maud = "0.25"
regex = "1"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
silicon = { version = "0.5", default-features = false, features = ["bin"] }
syntect = "5.0"
